Add visibleRect and displayWidth|Height to VideoFrameInit
Allows metadata override for efficient crop/resize.

Fixes #281.

--- a/index.src.html
+++ b/index.src.html
@@ -2924,6 +2924,15 @@ dictionary VideoFrameInit {
   unsigned long long duration;  // microseconds
   long long timestamp;          // microseconds
   AlphaOption alpha = "keep";
+
+  // Default matches image. May be used to efficiently crop. Will trigger
+  // new computation of displayWidth and displayHeight using image's pixel
+  // aspect ratio unless an explicit displayWidth and displayHeight are given.
+  DOMRectInit visibleRect;
+
+  // Default matches image unless visilbeRect is provided.
+  [EnforceRange] unsigned long displayWidth;
+  [EnforceRange] unsigned long displayHeight;
 };
 
 dictionary VideoFrameBufferInit {
@@ -3389,13 +3398,28 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
         instance of the [=sRGB Color Space=]
     3. Otherwise, return a new instance of the [=REC709 Color Space=].
 
+: <dfn>Validate VideoFrameInit</dfn> (with |codedWidth| and |codedHeight|):
+:: 1. If |codedWidth| = 0 or |codedHeight| = 0,return `false`.
+    2. If any attribute of {{VideoFrameInit/visibleRect}} is negative or
+        not finite, return `false`.
+    3. If {{VideoFrameInit/visibleRect}}.{{DOMRectInit/y}} +
+        {{VideoFrameInit/visibleRect}}.{{DOMRectInit/height}} >=
+        |codedHeight|, return `false`.
+    4. If {{VideoFrameInit/visibleRect}}.{{DOMRectInit/x}} +
+        {{VideoFrameInit/visibleRect}}.{{DOMRectInit/width}} >=
+        |codedWidth|, return `false`.
+    5. If only one of {{VideoFrameInit/displayWidth}} or
+        {{VideoFrameInit/displayHeight}} [=map/exists=], return `false`.
+    6. If {{VideoFrameInit/displayWidth}} = 0 or
+        {{VideoFrameInit/displayHeight}} = 0, return `false`.
+    7. Return `true`.
+
 : To check if a {{VideoFrameBufferInit}} is a
     <dfn>valid VideoFrameBufferInit</dfn>, run these steps:
 :: 1. If {{VideoFrameBufferInit/codedWidth}} = 0 or
         {{VideoFrameBufferInit/codedHeight}} = 0,return `false`.
-    2. If {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/width}} = 0
-        or {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/height}} =
-        0, return `false`.
+    2. If any attribute of {{VideoFrameBufferInit/visibleRect}} is negative or
+        not finite, return `false`.
     3. If {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/y}} +
         {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/height}} >=
         {{VideoFrameBufferInit/codedHeight}}, return `false`.
@@ -3410,51 +3434,91 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
 
 : <dfn for=VideoFrame>Initialize Frame From Other Frame</dfn> (with |init|,
     |frame|, and |otherFrame|)
-:: 1. Let |resource| be the [=media resource=] referenced by |otherFrame|'s
+:: 1. Let |validInit| be the result of running the [=Validate VideoFrameInit=]
+        algorithm with |otherFrame|'s {{VideoFrame/[[coded width]]}} and
+        {{VideoFrame/[[coded height]]}}.
+    2. If |validInit| is `false`, throw a  {{TypeError}}.
+    3. Let |resource| be the [=media resource=] referenced by |otherFrame|'s
         {{VideoFrame/[[resource reference]]}}.
-    2. Assign a new reference for |resource| to |frame|'s
+    4. Assign a new reference for |resource| to |frame|'s
         {{VideoFrame/[[resource reference]]}}.
-    3. Assign the following attributes from |otherFrame| to |frame|:
+    5. Assign the following attributes from |otherFrame| to |frame|:
         {{VideoFrame/codedWidth}}, {{VideoFrame/codedHeight}},
-        {{VideoFrame/visibleRect}}, {{VideoFrame/displayWidth}},
-        {{VideoFrame/displayHeight}}, {{VideoFrame/colorSpace}}.
-    4. If {{VideoFrameInit/duration}} [=map/exists=] in |init|, assign it to
+        {{VideoFrame/colorSpace}}.
+    7. Let |defaultVisibleRect| be the result of performing the getter steps
+        for {{VideoFrame/visibleRect}} on |otherFrame|.
+    8. Let |defaultDisplayWidth|, and |defaultDisplayHeight| be |otherFrame|'s
+        {{VideoFrame/[[display width]]}}, and {{VideoFrame/[[display height]]}}
+        respectively.
+    6. Run the [=VideoFrame/Initialize Visible Rect and Display Size=]
+        algorithm with |init|, |frame|, |defaultVisibleRect|,
+        |defaultDisplayWidth|, and |defaultDisplayHeight|.
+    6. If {{VideoFrameInit/duration}} [=map/exists=] in |init|, assign it to
         |frame|.{{VideoFrame/duration}}. Otherwise, assign
         |otherFrame|.{{VideoFrame/duration}} to
         |frame|.{{VideoFrame/duration}}.
-    5. If {{VideoFrameInit/timestamp}} [=map/exists=] in |init|, assign it to
+    7. If {{VideoFrameInit/timestamp}} [=map/exists=] in |init|, assign it to
         |frame|.{{VideoFrame/timestamp}}. Otherwise, assign
         |otherFrame|.{{VideoFrame/timestamp}} to
         |frame|.{{VideoFrame/timestamp}}.
-    7. If |init|.{{VideoFrameInit/alpha}} is {{AlphaOption/discard}},
+    8. If |init|.{{VideoFrameInit/alpha}} is {{AlphaOption/discard}},
         assign |otherFrame|.{{VideoFrame/format}}'s
         [=equivalent opaque format=] to |frame|.{{VideoFrame/[[format]]}}.
-    8. Otherwise, assign |otherFrame|.{{VideoFrame/format}} to
+    9. Otherwise, assign |otherFrame|.{{VideoFrame/format}} to
         |frame|.{{VideoFrame/[[format]]}}.
 
 : <dfn for=VideoFrame>Initialize Frame With Resource and Size</dfn> (with
     |init|,  |frame|, |resource|, |width| and |height|)
-:: 1. Assign a new reference for |resource| to |frame|'s
+:: 1. Let |validInit| be the result of running the [=Validate VideoFrameInit=]
+        algorithm with |width| and |height|.
+    2. If |validInit| is `false`, throw a  {{TypeError}}.
+    3. Assign a new reference for |resource| to |frame|'s
         {{VideoFrame/[[resource reference]]}}.
-    2. Let |format| be `null`.
-    3. If |resource| uses a recognized {{VideoPixelFormat}}, assign the
+    4. Let |format| be `null`.
+    5. If |resource| uses a recognized {{VideoPixelFormat}}, assign the
         {{VideoPixelFormat}} of |resource| to |format|.
-    4. If |init|.{{VideoFrameInit/alpha}} is {{AlphaOption/discard}}, assign
+    6. If |init|.{{VideoFrameInit/alpha}} is {{AlphaOption/discard}}, assign
         |format|'s [=equivalent opaque format=] to |format|.
-    5. Assign |format| to {{VideoFrame/[[format]]}}
-    6. Assign |width| to the following attributes of |frame|:
-        {{VideoFrame/codedWidth}}, {{VideoFrame/displayWidth}}.
-    7. Assign |height| to the following attributes of |frame|:
-        {{VideoFrame/codedHeight}}, {{VideoFrame/displayHeight}}.
-    8. Assign «[ "x:" → `0`, "y" → `0`, "width" → |width|, "height" →
-        |height| ]» to |frame|.{{VideoFrame/visibleRect}}.
-    9. Assign `init`.{{VideoFrameInit/duration}} to
+    7. Assign |format| to {{VideoFrame/[[format]]}}
+    8. Assign |width| and |height| to |frame|'s {{VideoFrame/[[coded width]]}}
+        and {{VideoFrame/[[coded height]]}} respectively.
+    9. Let |defaultVisibleRect| be a new {{DOMRect}} constructed with
+        «[ "x:" → `0`, "y" → `0`, "width" → |width|, "height" → |height| ]»
+    10. Run the [=VideoFrame/Initialize Visible Rect and Display Size=]
+        algorithm with |init|, |frame|, |defaultVisibleRect|, |width|, and
+        |height|.
+    11. Assign `init`.{{VideoFrameInit/duration}} to
         |frame|.{{VideoFrame/duration}}.
-    10. Assign `init`.{{VideoFrameInit/timestamp}} to
+    12. Assign `init`.{{VideoFrameInit/timestamp}} to
         |frame|.{{VideoFrame/timestamp}}.
-    9. If |resource| has a known {{VideoColorSpace}}, assign its value to
+    13. If |resource| has a known {{VideoColorSpace}}, assign its value to
         {{VideoFrame/[[color space]]}}.
-    10. Otherwise, assign `null` to {{VideoFrame/[[color space]]}}.
+    14. Otherwise, assign `null` to {{VideoFrame/[[color space]]}}.
+
+: <dfn for=VideoFrame>Initialize Visible Rect and Display Size</dfn> (with
+    |init|, |frame|, |defaultVisibleRect|, |defaultDisplayWidth| and
+    |defaultDisplayHeight|)
+:: 1. Let |visibleRect| be |defaultVisibleRect|.
+    2. If |init|.{{VideoFrameInit/visibleRect}} [=map/exists=], assign it to
+        |visibleRect|.
+    3. Assign |visibleRect|'s {{DOMRect/x}}, {{DOMRect/y}}, {{DOMRect/width}},
+        and {{DOMRect/height}}, to |frame|'s {{VideoFrame/[[visible left]]}},
+        {{VideoFrame/[[visible top]]}}, {{VideoFrame/[[visible width]]}}, and
+        {{VideoFrame/[[visible height]]}} respectively.
+    4. If {{VideoFrameInit/displayWidth}} and {{VideoFrameInit/displayHeight}}
+        [=map/exist=] in |init|, assign them to {{VideoFrame/[[display width]]}}
+        and {{VideoFrame/[[display height]]}} respectively.
+    5. Otherwise:
+        1. Let |widthScale| be the result of dividing |defaultDisplayWidth| by
+            |defaultVisibleRect|.{{DOMRect/width}}.
+        2. Let |heightScale| be the result of dividing |defaultDisplayHeight| by
+            |defaultVisibleRect|.{{DOMRect/height}}.
+        3. Assign the result of multiplying |frame|'s
+            {{VideoFrame/[[visible width]]}} by |widthScale| to |frame|'s
+            {{VideoFrame/[[display width]]}}.
+        4. Assign the result of multiplying |frame|'s
+            {{VideoFrame/[[visible height]]}} by |heightScale| to |frame|'s
+            {{VideoFrame/[[display height]]}}.
 
 : <dfn>Clone VideoFrame</dfn> (with |frame|)
 :: 1. Let |clone| be a new {{VideoFrame}} initialized as follows:
