Replace remaining instances of rfc2119 words with english equivalent after rebase

--- a/index.src.html
+++ b/index.src.html
@@ -2003,7 +2003,7 @@ User Agent does not implement [[media-capabilities]] for reasons of
 fingerprinting, they SHOULD ignore the {{HardwareAcceleration}} preference.
 
 <div class='note'>
-  NOTE: Good examples of when a User Agent may ignore
+  NOTE: Good examples of when a User Agent can ignore
   {{HardwareAcceleration/prefer-hardware}} or
   {{HardwareAcceleration/prefer-software}} are for reasons of user privacy or
   circumstances where the User Agent determines an alternative setting would
@@ -2020,10 +2020,10 @@ fingerprinting, they SHOULD ignore the {{HardwareAcceleration}} preference.
   device-specific, but authors can generally expect the following:
 
   * Setting a value of {{HardwareAcceleration/prefer-hardware}} or
-      {{HardwareAcceleration/prefer-software}} may significantly restrict what
-      configurations are supported. It may occur that the user's device does not
+      {{HardwareAcceleration/prefer-software}} can significantly restrict what
+      configurations are supported. It can occur that the user's device does not
       offer acceleration for any codec, or only for the most common profiles of
-      older codecs. It may also occur that a given User Agent lacks a software
+      older codecs. It can also occur that a given User Agent lacks a software
       based codec implementation.
   * Hardware acceleration does not simply imply faster encoding / decoding.
       Hardware acceleration often has higher startup latency but more consistent
@@ -2058,7 +2058,7 @@ fingerprinting, they SHOULD ignore the {{HardwareAcceleration}} preference.
     software codec implementation.  User Agents may ignore this value for any
     reason.
 
-    NOTE: This may cause the configuration to be unsupported on platforms where
+    NOTE: This can cause the configuration to be unsupported on platforms where
     an unaccelerated codec is unavailable or is incompatible with other aspects
     of the codec configuration.
   </dd>
@@ -2067,7 +2067,7 @@ fingerprinting, they SHOULD ignore the {{HardwareAcceleration}} preference.
     Indicates that the User Agent <em class="rfc2119">SHOULD</em> prefer
     hardware acceleration. User Agents may ignore this value for any reason.
 
-    NOTE: This may cause the configuration to be unsupported on platforms where
+    NOTE: This can cause the configuration to be unsupported on platforms where
     an accelerated codec is unavailable or is incompatible with other aspects of
     the codec configuration.
   </dd>
