Add note clarifying behavior of copyTo() wrt gaps

--- a/index.src.html
+++ b/index.src.html
@@ -3835,6 +3835,10 @@ dictionary PlaneLayout {
 : <dfn dict-member for=PlaneLayout>offset</dfn>
 :: The offset in bytes where the given plane begins within a {{BufferSource}}.
 
+    NOTE: Authors may use {{PlaneLayout/offset}} to create a gap of bytes
+        between planes. Such gaps can be mutated (e.g. zeroed) by the User
+        Agent. The specifics of such mutations (if any) are implementer defined.
+
 : <dfn dict-member for=PlaneLayout>stride</dfn>
 :: The number of bytes, including padding, used by each row of the plane within
     a {{BufferSource}}.
