Add note encouraging VideoEncoderConfig.framerate
Authors who set bitrate should consider also setting framerate. We can generally detect framerate from timestamps, but providing a hint up front avoids assumptions for early frames.

--- a/index.src.html
+++ b/index.src.html
@@ -1931,6 +1931,9 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
   <dt><dfn dict-member for=VideoEncoderConfig>bitrate</dfn></dt>
   <dd>
     The average bitrate of the encoded video given in units of bits per second.
+      
+    NOTE: Authors are encouraged to additionally provide a
+    {{VideoEncoderConfig/framerate}} to inform rate control.
   </dd>
 
   <dt><dfn dict-member for=VideoEncoderConfig>framerate</dfn></dt>
