Add alaw and ulaw codec registrations

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -122,13 +122,17 @@ Audio Codec Registry {#audio-codec-registry}
   </tr>
   <tr>
     <td>ulaw</td>
-    <td>PCM u-law</td>
-    <td>N/A</td>
+    <td>u-law PCM</td>
+    <td>[u-law PCM WebCodecs
+      Registration](https://www.w3.org/TR/webcodecs-ulaw-codec-registration/)
+    [[WEBCODECS-ULAW-CODEC-REGISTRATION]]</td>
   </tr>
   <tr>
     <td>alaw</td>
-    <td>PCM a-law</td>
-    <td>N/A</td>
+    <td>A-law PCM</td>
+    <td>[A-law PCM WebCodecs
+      Registration](https://www.w3.org/TR/webcodecs-alaw-codec-registration/)
+    [[WEBCODECS-ALAW-CODEC-REGISTRATION]]</td>
   </tr>
 </table>
 
